--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -18,7 +18,7 @@ table.table.table-hover
   thead.thead-default
     tr
       th= Task.human_attribute_name(:name)
-      th= Task.human_attribute_name(:created_at)
+      th= sort_link(@q, :created_at, [:created_at, "name desc"])
       th
     tbody
       - @tasks.each do |task|
