--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,4 +1,6 @@
 h1 タスク一覧
+- # SVGテスト用のタグ、アプリには反映しないが、データとして残しておく
+- # = embedded_svg "check-solid.svg", class: "checked-icon", size: "50x50"
 
 = search_form_for @q, class: 'mb-5' do |f|
   .form-group.row
@@ -11,6 +13,7 @@ h1 タスク一覧
       = f.search_field :created_at_gteq, class: 'form-control'
   .form-group
     = f.submit class: 'btn btn-outline-primary'
+
 
 =link_to '新規登録', new_task_path, class: 'btn btn-primary'
 .mb-3
@@ -28,3 +31,4 @@ table.table.table-hover
           td
             = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
             = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除しますか？", class: 'btn btn-danger' }
+          = paginate @tasks
